--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+Devanagari:wght@100..900&display=swap");
+
 @font-face {
   font-family: "Sagarmatha";
   src: url("../fonts/sagarmatha.ttf") format("truetype");
